Decreases font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,7 @@ ul {
   box-shadow: inset 0 0 10px #444444;
 }
 .post .post-article {
+  font-size: 14px;
   text-align: center;
   line-height: 1.7em;
 }
