--- a/default.hbs
+++ b/default.hbs
@@ -15,6 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         {{! Styles'n'Scripts }}
+        <link rel="shortcut icon" href="/assets/images/favicon.ico" />
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" />
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
