Makes the theme HTTPS-ready

--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
         {{! Styles'n'Scripts }}
         <link rel="shortcut icon" href="/assets/images/favicon.ico" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" />
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600" />
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
 
@@ -56,9 +56,9 @@
         {{ ghost_foot }}
 
         {{! The main JavaScript file for Casper }}
-        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-        <script src="http://arcanis.github.io/js.datefuzz/jquery.datefuzz.js"></script>
-        <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+        <script src="/assets/js/jquery-2.0.3.min.js"></script>
+        <script src="/assets/js/jquery.datefuzz.js"></script>
+        <script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
         <script type="text/javascript" src="/assets/js/index.js"></script>
 
     </body>
