Fixes generated Twitter links

--- a/index.hbs
+++ b/index.hbs
@@ -21,7 +21,7 @@
                     {{{ content }}}
                 </article>
                 <div class="post-tools">
-                    <a class="tool twitter" href="http://twitter.com/share?url={{ url }}&text=Blog+post+-+{{ title }}&via=arcanis" target="_blank">
+                    <a class="tool twitter" href="http://twitter.com/share?url={{ url absolute="true" }}&text=Blog+post+-+{{ title }}&via=arcanis" target="_blank">
                         <i class="fa fa-twitter"></i>
                     </a>
                     <a class="tool comment" href="#comments">
