Disables comment button for now

--- a/assets/css/desktop.less
+++ b/assets/css/desktop.less
@@ -333,6 +333,10 @@
             font-size: 50px;
 
             color: #DADADA;
+
+            &.comment {
+                display: none;
+            }
         }
 
         .tool.twitter:hover {
