Fixes css classes

--- a/assets/css/desktop.less
+++ b/assets/css/desktop.less
@@ -351,7 +351,7 @@
 
 /**********************************/
 
-.post--default {
+.post {
     .post-header {
         background-color: #767777; }
     .post-header .title::before {
@@ -359,7 +359,7 @@
     .post-article a {
         color: #BEBEBE; } }
 
-.post--traveling {
+.post.tag-traveling {
     .post-header {
         background-color: #4AB6E9; }
     .post-header .title::before {
@@ -367,7 +367,7 @@
     .post-article a {
         color: #4AB6E9; } }
 
-.post--programming {
+.post.tag-programming {
     .post-header {
         background-color: #FF7979; }
     .post-header .title::before {
@@ -375,7 +375,7 @@
     .post-article a {
         color: #FF7979; } }
 
-.post--personal {
+.post.tag-personal {
     .post-header {
         background-color: #73CA81; }
     .post-header .title::before {
@@ -383,7 +383,7 @@
     .post-article a {
         color: #73CA81; } }
 
-.post--favorites {
+.post.tag-favorites {
     .post-header {
         background-color: #EBDB8A; }
     .post-header .title::before {
