--- a/post.hbs
+++ b/post.hbs
@@ -4,7 +4,7 @@
     the {body} of the default.hbs template, which contains our header/footer. }}
 
 {{#post}}
-    <main class="post post--default post--{{#if tags}}{{ tags.0.name }}{{/if}}">
+    <main class="{{ post_class }}">
         <header class="post-header">
             <a class="link" href="{{ url }}">
                 <h3 class="title">{{ title }}</h3>
