Fixes time count

--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@
         <header class="post-header">
             <a class="link" href="{{ url }}">
                 <h3 class="title">{{ title }}</h3>
-                <time class="date datefuzz" datetime="{{ date format="YYYY-MM-DDTHH:mm:ss" }}Z">
+                <time class="date datefuzz" datetime="{{ date format="YYYY-MM-DDTHH:mm:ssZ" }}">
                     {{ date format="DD/MM/YYYY" }}
                 </time>
             </a>
