Fixes a few things

--- a/assets/css/desktop.less
+++ b/assets/css/desktop.less
@@ -280,6 +280,8 @@
         }
 
         iframe, img {
+            max-width: 100%;
+
             border-radius: 3px;
         }
 
@@ -295,6 +297,11 @@
             &:last-child {
                 margin-bottom: 0;
             }
+        }
+
+        h1 {
+            font-size: 40px;
+            line-height: 70px;
         }
 
         ul, ol {
