--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,7 @@ ul {
 }
 .post .post-article iframe,
 .post .post-article img {
+  max-width: 100%;
   border-radius: 3px;
 }
 .post .post-article h1,
@@ -256,6 +257,10 @@ ul {
 .post .post-article pre:last-child,
 .post .post-article blockquote:last-child {
   margin-bottom: 0;
+}
+.post .post-article h1 {
+  font-size: 40px;
+  line-height: 70px;
 }
 .post .post-article ul,
 .post .post-article ol {
